
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Removing deprecated RTE handler code
- [#MODX-1762] Increased file uploader window size for translations
- Dont render unnecessary tabs in Resource TV panel if no TVs assigned to Template for that Resource
- Sort Template Variables on the Template editing page by name
- Ensure Element Properties that have HTML in them show markup instead of rendering the html in editing mode in mgr ui 
- [#MODX-1669] Redid File Uploader in Directory tree to be more cross-browser compatible 
- Cleaned up and enhanced login CSS
- Standardizing and adding class constants to modRest* classes
- Updated copyright data in lexicon entries
- Fixes to build.xml, css compression command
- Updated copyright dates
- [#MODX-1750] Lots of procedural and reference fixes to Lexicon grid UI
- Cleaned up presentation of modAction records in mgr
- Added a fix to tree refreshParentNode; enhanced modUserGroup::getUsersIn()
- Added saving mask to Element Property grid to fire when saving the property set
- Removed deprecated file reference in login template
- Added System Settings to toggle news/security feeds in welcome panel
- Added System Setting to toggle on automatic checking of package updates in Package Management
- [#MODX-1751] Fixed erroneous reference in friendly alias setting description
- [#MODX-1752] Fixed bug where topmenu items without children didnt show even if they had an action
- Some css tweaks to login page
- Updated to xPDO 2.0.0 r419 to fix xPDOVehicle bug
- Fixed bug with Download Output button in MODx.Console
- Ensure forgot login activation email is HTML 
- Added Forgot Login link and form to manager, sends an activation email to specified email if user forgot login/password